# handler/listOpening.go
@@ -1,19 +1,0 @@
-package handler
-
-import (
-	"net/http"
-
-	"github.com/gin-gonic/gin"
-	"github.com/renatocardoso243/gopportunities.git/schemas"
-)
-
-func ListOpeningsHandler(ctx *gin.Context) {
-	openings := []schemas.Opening{}
-	
-	if err := db.Find(&openings).Error; err != nil {
-		sendError(ctx, http.StatusInternalServerError, "error listing openings")
-		return
-	}
-
-	sendSuccess(ctx, "list-openings", openings)
-}
