# handler/listOpenings.go
@@ -7,8 +7,15 @@ import (
 	"github.com/renatocardoso243/gopportunities.git/schemas"
 )
 
-
-
+// @BasePath /api/v1
+// @Sumary List openings
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 	
