# handler/response.go
@@ -40,3 +40,7 @@ type ShowOpeningResponse struct {
 	Message string `json:"message"`
 	Data 	schemas.OpeningResponse `json:"data"`
 }
+type ListOpeningsResponse struct {
+	Message string `json:"message"`
+	Data 	[]schemas.OpeningResponse `json:"data"`
+}
